alignment/shadowing fixes

--- a/www/assets/styles/general.less
+++ b/www/assets/styles/general.less
@@ -138,9 +138,6 @@ a {
     color: #4fa2cd; 
 	line-height:1.4em;
     .gradient(#EFEFEF, #FFFFFF);
-    h1,h2,h3{
-        text-shadow: rgba(255,255,255,0.9) 0 -1px, rgba(0,0,0,0.15) 0 1px;
-    }
 }
 
 #main{
