--- a/www/sites/default/assets/styles/slider.less
+++ b/www/sites/default/assets/styles/slider.less
@@ -5,7 +5,7 @@
 #featured-slider-description{
     position: absolute;
     right:40px;
-    top: 21px;
+    top: 18px;
     padding: 20px 67px 20px 30px;
     width: 304px; height: 240px;
     background: #318aba url('../images/slider-description-background.png') ;
